syntax = "proto3";

package user_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "https://github.com/CapitanSize/auth-service/pkg/user_v1;user_v1";

service UserV1 {
  rpc Create (CreateRequest) returns (CreateResponse) {}
  rpc Get (GetRequest) returns (GetResponse) {}
  rpc Update (UpdateRequest) returns (google.protobuf.Empty) {}
  rpc Delete (DeleteRequest) returns (google.protobuf.Empty) {}
}

message User {
  int64 id = 1;
  UserData data = 2;
  google.protobuf.Timestamp updated_at = 3;
  google.protobuf.Timestamp created_at = 4;
}

message UserData {
  string name = 1;
  string surname = 2;
  uint64 age = 3;
  string email = 4;
  Role role = 5;
}


message CreateRequest {
  UserData data = 1;
  string password = 2;
  string password_confirm = 3;
  Role role = 4;
}

message CreateResponse {
  int64 id = 1;
}

enum Role {
  Admin = 0;
  Employee = 1;
}

message GetRequest {
  int64 id = 1;
}

message GetResponse {
    User user = 1;
}

message UpdateRequest {
  int64 id = 1;
  UserData data = 2;
}

message DeleteRequest {
  int64 id = 1;
}